--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   },
   "dependencies": {
     "@nuxt/ui": "^2.18.4",
+    "@pinia/nuxt": "^0.5.3",
+    "axios": "^1.7.3",
     "nuxt": "^3.12.4",
+    "pinia": "^2.2.1",
     "vue": "latest",
+    "vue3-toastify": "^0.2.2",
     "zod": "^3.23.8"
   }
 }
