--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxt/ui": "^2.18.4",
     "@pinia/nuxt": "^0.5.3",
     "axios": "^1.7.3",
+    "date-fns": "^3.6.0",
     "nuxt": "^3.12.4",
     "pinia": "^2.2.1",
     "vue": "latest",
