--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "start": "node .output/server/index.mjs"
+    "start": "node .output/server/index.mjs",
+    "generate-vapid": "npx web-push generate-vapid-keys"
   },
   "dependencies": {
     "@nuxt/ui": "^2.18.4",
@@ -19,6 +20,10 @@
     "pinia": "^2.2.1",
     "vue": "latest",
     "vue3-toastify": "^0.2.2",
+    "web-push": "^3.6.7",
     "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@types/web-push": "^3.6.4"
   }
 }
